--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="blue animate__animated animate__fadeInUp"></div>
         <div class="name animate__animated animate__fadeIn">
             <!-- <h2><span>I'm a Computer Science & Engineering Student at <span><a style="color: #fff;" href="https://jssstuniv.in/">JSSSTU</a></span></h2> -->
-            <h1 class="fe"><span>I'm a FRONT END DEVELOPER</span></h1>
-
+            <h1 class="fe"><span>I'm a CS & Engg. student</span></h1>
+ 
             <br><br><br>
             <!-- <h1>Adithya P Patel</h1> -->
         </div>
