--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                     <li>- 🧐 Clever Young Programmer with 4 years of experience.</li>
                     <li>- 👨🏽‍🏫 Intermediate Front End Developer.</li>
                     <li>- 🌐 Developed the knowledge of Web Development over the past few months.</li>
-                    <li>- 🤖 Started my journey in Android Development.</li>
                     <li>- 🤝 Proven ability to transform people's ideas into beautiful, functional Web design and Interface.</li>
                     <li>- ⁉️ Centre of Attention towards Intellectual Mindset.</li>
                 </ul>
@@ -79,7 +78,7 @@
                     <li>CSS</li>
                     <li>Javascript</li>
                     <li>C</li>
-                    <li>Kotlin</li>
+                    <li>Python</li>
                     <li>Java</li>
                     <li>C++</li>
                 </ul>
